Fixed bug that caused 3-legged OAuth calls to fail